	emoticons, so alt can be used for alternate characters. Disable vsync
	on mac.

2008-04-17  David Athay  <ko2fan@gmail.com>

	* src/player.cpp, src/player.h, src/net/partyhandler.h,
	src/net/guildhandler.h, src/net/partyhandler.cpp,
	src/net/guildhandler.cpp, src/net/chatserver/party.cpp,
	src/net/chatserver/party.h, src/localplayer.h: Added basic party
	support.

2008-04-17  Yohann Ferreira <bertram@cegetel.net>

	* src/gui/progressbar.h, src/gui/progressbar.cpp: Added smooth
	changes in progressbar.
	* src/net/chatserver/chatserver.h: One file was forgotten into the
	private channels removal.
	* src/localplayer.h, src/localplayer.cpp, src/gui/viewport.cpp,
	src/main.h, src/main.cpp: Added input type parameter to the
	LocalPlayer::setDestination methods in order to keep control over
	message flooding to the server with mouse dragging. Moved mouse calls
	flooding control into viewport to avoid calling setDestination
	unecessarily.
	* Fixed a crash when clicking on 'Quit Guild' Button. Also disabled
	the 'Invite user' and 'Quit Guild' buttons when no guild is created.

2008-04-16  David Athay  <ko2fan@gmail.com>

	* src/gui/guildlistbox.cpp, src/gui/guildwindow.h,
	src/gui/widgets/tabbedarea.cpp, src/gui/chat.cpp,
	src/gui/guildlistbox.h, src/gui/guildwindow.cpp, src/guild.cpp,
	src/guild.h, src/net/guildhandler.cpp: Fixed online status so that
	users are shown as online.
	* src/gui/chat.cpp, src/net/protocol.h,
	src/net/chatserver/chatserver.cpp: Remove private channels.

2008-04-16  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/npc_text.h, src/gui/textbox.cpp, src/gui/npc_text.cpp,
	src/gui/scrollarea.h, src/gui/textbox.h: Restored the text wrapping in
	TextBox, since it was based on overriding a method that is no longer
	virtual in Guichan 0.8.0.

2008-04-16  Dennis Friis  <peavey@placid.dk>

	* src/gui/browserbox.cpp: Fix a basic_string::at sometimes being out
	of range in BrowserBox::draw when checking for color codes.