@@ -171,6 +171,11 @@ void SellDialog::action(const gcn::ActionEvent &event)
             mShopItemList->setSelected(-1);
             mShopItems->getShop()->erase(
                     mShopItems->getShop()->begin() + selectedItem);
+
+            gcn::Rectangle scroll;
+            scroll.y = mShopItemList->getRowHeight() * (selectedItem + 1);
+            scroll.height = mShopItemList->getRowHeight();
+            mShopItemList->showPart(scroll);
         }
         else
         {
